--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-email/render": "^1.2.1",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.16.1",
